--- a/ProfileKelas.html
+++ b/ProfileKelas.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Selamat datang di kelas web</h1>
   <p>Website ini adalah website sederhana.</p>
+  <a href="about.html">Tentang kelas</a>
 </body>
 </html>
