menambah teks fitu baru

--- a/ProfileKelas.html
+++ b/ProfileKelas.html
@@ -6,6 +6,7 @@
 <body>
   <h1>Selamat datang di kelas web</h1>
   <p>Website ini adalah website sederhana.</p>
+  <p><b>Ini versi fitur terbaru nya!!!!</b></p>
   <a href="about.html">Tentang kelas</a>
 </body>
 </html>
